# options

./: .env.example  .gitignore  README.md  pyproject.toml
apps/api/: pyproject.toml
apps/api/migrations/: 001_initial_schema.sql
apps/api/stratlab_api/: __init__.py  auth.py  config.py  main.py  schemas.py  storage.py  storage_protocol.py  storage_supabase.py  storage_types.py
apps/api/stratlab_api/exporters/: __init__.py  python_export.py
apps/api/stratlab_api/exporters/templates/: strategy_template.py
apps/api/stratlab_api/llm/: __init__.py  critique.py  prompts.py  protocol.py
apps/api/stratlab_api/llm/providers/: __init__.py  gemini.py  mock.py
apps/api/stratlab_api/routes/: __init__.py  backtests.py  chat.py  critique.py  health.py  strategies.py  universe.py
apps/api/stratlab_api/static/: index.html
apps/api/tests/: test_api.py  test_chat.py  test_supabase_store.py
apps/web/: instrumentation-client.ts  instrumentation.ts  middleware.ts  next.config.ts  package.json  pnpm-lock.yaml  sentry.edge.config.ts  sentry.server.config.ts
apps/web/app/: global-error.tsx  globals.css  layout.tsx  page.tsx
apps/web/app/auth/callback/: route.ts
apps/web/app/sign-in/: page.tsx
apps/web/app/sign-up/: page.tsx
apps/web/components/: ChatView.tsx  CodeView.tsx  CompareView.tsx  Composer.tsx  CostStressChart.tsx  CritiqueCard.tsx  Dashboard.tsx  DrawdownChart.tsx  EmptyChat.tsx  EmptyDashboard.tsx  EquityChart.tsx  LibraryView.tsx  MessageBubble.tsx  MessageList.tsx  MetricsStrip.tsx  RegimeBreakdownGrid.tsx  RobustnessPills.tsx  SectionLabel.tsx  SensitivityHaloChart.tsx  Sidebar.tsx  Topbar.tsx  TradesTable.tsx  VersionTimeline.tsx  WalkForwardChart.tsx  Workbench.tsx
apps/web/components/auth/: AuthCard.tsx
apps/web/lib/: api.ts  fingerprint.ts  slashCommands.ts  types.ts  utils.ts
apps/web/lib/supabase/: client.ts  server.ts
scripts/: backfill.py  dev.sh
