[project]
name = "stratlab-monorepo"
version = "0.0.0"
description = "StratLab — conversational quant research workbench (monorepo root)"
requires-python = ">=3.13"

[tool.uv.workspace]
members = ["packages/*", "apps/api"]

[tool.uv.sources]
stratlab-schema = { workspace = true }
stratlab-engine = { workspace = true }
stratlab-api = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.7",
    "httpx>=0.28",
    "stratlab-schema",
    "stratlab-engine",
    "stratlab-api",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.ruff.lint.per-file-ignores]
# prompts.py contains long natural-language few-shot examples and JSON literals;
# breaking lines would hurt readability of the prompt itself.
"apps/api/stratlab_api/llm/prompts.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["packages", "apps"]
addopts = "-q"
