[project]
name = "stratlab-api"
version = "0.1.0"
description = "FastAPI service for StratLab — strategies, backtests, universe."
requires-python = ">=3.13"
dependencies = [
    "stratlab-schema",
    "stratlab-engine",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic-settings>=2.6",
    "pyjwt>=2.10",
    "sentry-sdk[fastapi]>=2.0",
    "google-genai>=1.0",
    "supabase>=2.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["stratlab_api"]
